<resources>
    <string name="app_name">KeepingSparringScore</string>
    <string name="competitor_2">Competitor 2</string>
    <string name="_2">+2</string>
    <string name="_1">+1</string>
    <string name="__1">-1</string>
    <string name="start_keeping_score">Start keeping score</string>
    <string name="review_score_keeping_rules">Review Score Keeping Rules</string>
    <string name="competitor_1">Competitor 1</string>
    <string name="name">name</string>
    <string name="score">Score</string>
    <string name="_0">0</string>
    <string name="strikes">Strikes</string>
    <string name="divider">:</string>
    <string name="start">Start</string>
    <string name="pause">pause</string>
    <string name="resume">Resume</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="rules_of_sparring">1.Kick to the head is two points. \n2.Kick to the body is one point.  \n3.Kick below the belt is one strike. \n4.Two strikes are one point for the opponent.  \n5.Three strikes disqualify competitor.  \n6.First person to reach five points wins.  \n7.Person with the most points by the end of five minutes wins.</string>
    <string name="done">Done</string>
    <string name="_300">300</string>
    <string name="winner">Winner</string>
    <string name="my_toast">Please, Reset Score and Timer</string>
    <string name="next_point">Next point wins</string>
    <string name="_2_points">2 points</string>
    <string name="_1_point">1 point</string>
    <string name="strike">strike</string>
    <string name="reset">reset</string>
</resources>
